# rust_workshop

./: Cargo.toml  Readme.md  build.rs
protos/: hello_world.proto  user.proto
src/: calc.rs  main.rs  user.rs  user_repository.rs  user_service.rs
workshop/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md
