[package]
name = "rust_workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore = "0.32.2"
prost = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
